plugins {
    id 'com.github.johnrengelman.shadow' version '6.0.0'
}

group 'fr.redstonneur1256'
version '1.1'

ext {
    versions = [:]
    devPath = System.getenv("DEV_SERVERS")
}

versions.annotations = '16.0.2'
versions.redutilities = '1.5.3'
versions.bstats = '2.2.1'
versions.spigot = '1.12.2-R0.1-SNAPSHOT'

allprojects {
    apply plugin: 'java-library'
    apply plugin: 'com.github.johnrengelman.shadow'

    jar.archiveFileName = "MinecraftMaps-${name}.jar"
    shadowJar.archiveFileName = jar.archiveFileName

    configurations {
        provided
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://jitpack.io" }
        maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    }

    compileJava {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
        options.encoding = 'UTF-8'
    }

    sourceSets.main.java.srcDirs = ['src/']
    sourceSets.main.resources.srcDirs = ['res/']
    sourceSets.test.java.srcDirs = []
    sourceSets.test.resources.srcDirs = []
}